--- a/The Mations proto Type_12_/Assembly-CSharp.csproj
+++ b/The Mations proto Type_12_/Assembly-CSharp.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Assets\Scripts\PaasWay\MapScripts\Door.cs" />
     <Compile Include="Assets\Scripts\PaasWay\MapScripts\SDoor.cs" />
     <Compile Include="Assets\Scripts\PaasWay\Zone_map\TutoDirector.cs" />
+    <Compile Include="Assets\SlotChange.cs" />
     <Compile Include="Assets\캐릭터애니\BackgroundRepeat.cs" />
     <Compile Include="Assets\캐릭터애니\Camera.cs" />
     <Compile Include="Assets\캐릭터애니\PlayerController.cs" />
@@ -349,9 +350,6 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="LitJson">
-      <HintPath>C:/Users/zere4/Downloads/The Mations proto Type_12_/Assets/Plugins/LitJson.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.Advertisements">
       <HintPath>C:/Users/zere4/Downloads/The Mations proto Type_12_/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.dll</HintPath>
     </Reference>
@@ -366,6 +364,9 @@
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>C:/Users/zere4/Downloads/The Mations proto Type_12_/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+    </Reference>
+    <Reference Include="LitJson">
+      <HintPath>C:/Users/zere4/Downloads/The Mations proto Type_12_/Assets/LitJson.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Editor/Data/MonoBleedingEdge/lib/mono/unity/mscorlib.dll</HintPath>
